# tg_it_bot

./: .gitignore  README.md  alembic.ini  bot.py  config.py  datawork.py  pyproject.toml  session_name.session  work_with_person_tg.py
database/: __init__.py  main.py
database/alembic/: env.py
database/alembic/versions/: 2024_12_02_1701-3477c732ad6a_create_dvr_table.py  2024_12_03_1823-38751bc79eb0_create_event_table.py  2024_12_04_0941-ef13b2e35c6a_create_event_table.py  2024_12_18_1235-c5bcf637b06d_create_city_and_chat_table.py  2024_12_18_1517-e3e58551c662_change_tg_chat_id_type_to_b_int.py  2024_12_24_1104-64a2e4693f1a_change_city_table.py  2024_12_24_1553-dc6a584e942c_create_relation_with_dvrs_and_cities_.py  2024_12_24_2115-fe91d6273c17.py  2025_03_20_1016-c293caa7ac89.py  2025_03_20_1054-28b4cf161d08.py  2025_03_20_1248-045036672abb.py  2025_03_20_1323-0af672921040.py  2025_03_21_0950-500a57bfca8b.py
database/crud/: __init__.py  chat.py  dvr.py  event.py
database/models/: chat.py  city.py  division.py  dvr.py  event.py
general/: emun.py  schemas.py  scripts.py
person/: __init__.py  activator.py  person.py
person/handler/: album.py  newmessage.py
schedule/: __init__.py  event_tasks.py  main.py  task.py  work_settings.py
statistic/graphs/: README.md
utils/: __init__.py  data_work.py
