[tool.poetry]
name = "tg-it-bot"
version = "0.1.0"
description = ""
authors = ["suhanov.a"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
telethon = "^1.37.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
seaborn = "^0.13.2"
pydantic-settings = "^2.6.1"
arq = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
